[gd_scene load_steps=3 format=3 uid="uid://bkrdh1ugss00a"]

[ext_resource type="PackedScene" uid="uid://kccesvha77mj" path="res://src/activities/add_activity.tscn" id="1_t3626"]
[ext_resource type="Script" path="res://src/activities/daily_activities.gd" id="1_vq8o2"]

[node name="DailyActivities" type="VBoxContainer"]
script = ExtResource("1_vq8o2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Monday"
horizontal_alignment = 1
uppercase = true

[node name="ActivityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="AddActivity" parent="MarginContainer/VBoxContainer/MarginContainer" node_paths=PackedStringArray("target_container") instance=ExtResource("1_t3626")]
layout_mode = 2
target_container = NodePath("../../ActivityContainer")
